--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "70ff4810",
+   "id": "99048dcc",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a5e3c321",
+   "id": "ce95254c",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8130ed15",
+   "id": "13062b5d",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0f863c",
+   "id": "094870c8",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "62aac50b",
+   "id": "bd4754f5",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a566d87c",
+   "id": "198f378a",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "48038aec",
+   "id": "fcdd41f5",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "d8162bbb",
+   "id": "a3111d91",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f63c1ac8",
+   "id": "67696da3",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eb4e8d47",
+   "id": "0fb16fba",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "eddb673c",
+   "id": "33cc5471",
    "metadata": {},
    "outputs": [
     {
@@ -292,8 +292,109 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "id": "042784c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class range in module builtins:\n",
+      "\n",
+      "class range(object)\n",
+      " |  range(stop) -> range object\n",
+      " |  range(start, stop[, step]) -> range object\n",
+      " |  \n",
+      " |  Return an object that produces a sequence of integers from start (inclusive)\n",
+      " |  to stop (exclusive) by step.  range(i, j) produces i, i+1, i+2, ..., j-1.\n",
+      " |  start defaults to 0, and stop is omitted!  range(4) produces 0, 1, 2, 3.\n",
+      " |  These are exactly the valid indices for a list of 4 elements.\n",
+      " |  When step is given, it specifies the increment (or decrement).\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __bool__(self, /)\n",
+      " |      self != 0\n",
+      " |  \n",
+      " |  __contains__(self, key, /)\n",
+      " |      Return key in self.\n",
+      " |  \n",
+      " |  __eq__(self, value, /)\n",
+      " |      Return self==value.\n",
+      " |  \n",
+      " |  __ge__(self, value, /)\n",
+      " |      Return self>=value.\n",
+      " |  \n",
+      " |  __getattribute__(self, name, /)\n",
+      " |      Return getattr(self, name).\n",
+      " |  \n",
+      " |  __getitem__(self, key, /)\n",
+      " |      Return self[key].\n",
+      " |  \n",
+      " |  __gt__(self, value, /)\n",
+      " |      Return self>value.\n",
+      " |  \n",
+      " |  __hash__(self, /)\n",
+      " |      Return hash(self).\n",
+      " |  \n",
+      " |  __iter__(self, /)\n",
+      " |      Implement iter(self).\n",
+      " |  \n",
+      " |  __le__(self, value, /)\n",
+      " |      Return self<=value.\n",
+      " |  \n",
+      " |  __len__(self, /)\n",
+      " |      Return len(self).\n",
+      " |  \n",
+      " |  __lt__(self, value, /)\n",
+      " |      Return self<value.\n",
+      " |  \n",
+      " |  __ne__(self, value, /)\n",
+      " |      Return self!=value.\n",
+      " |  \n",
+      " |  __reduce__(...)\n",
+      " |      Helper for pickle.\n",
+      " |  \n",
+      " |  __repr__(self, /)\n",
+      " |      Return repr(self).\n",
+      " |  \n",
+      " |  __reversed__(...)\n",
+      " |      Return a reverse iterator.\n",
+      " |  \n",
+      " |  count(...)\n",
+      " |      rangeobject.count(value) -> integer -- return number of occurrences of value\n",
+      " |  \n",
+      " |  index(...)\n",
+      " |      rangeobject.index(value) -> integer -- return index of value.\n",
+      " |      Raise ValueError if the value is not present.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Static methods defined here:\n",
+      " |  \n",
+      " |  __new__(*args, **kwargs) from builtins.type\n",
+      " |      Create and return a new object.  See help(type) for accurate signature.\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  start\n",
+      " |  \n",
+      " |  step\n",
+      " |  \n",
+      " |  stop\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(range)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "b3d18455",
+   "id": "61a15ed2",
    "metadata": {},
    "outputs": [],
    "source": []
