--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "698c9cda",
+   "id": "49349e5d",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a7c1e498",
+   "id": "248486b8",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3b2672b1",
+   "id": "c546c258",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1474a56",
+   "id": "2102ab40",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "91c5a9eb",
+   "id": "5becdf35",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "39003068",
+   "id": "64660ac0",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "df8b1e63",
+   "id": "187b0780",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "df990033",
+   "id": "82abc0e5",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a0cb2abd",
+   "id": "3e2226b7",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "271617a7",
+   "id": "57f5d969",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f6bc911d",
+   "id": "3c966da7",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "e00fd932",
+   "id": "1411d574",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,13 +302,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "14779b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'breal' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [81], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m res \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m res \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 6\u001b[0m     breal\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'breal' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "res = 10\n",
+    "for i in a:\n",
+    "    print(i)\n",
+    "    res -= 1\n",
+    "    if res < 0:\n",
+    "        breal"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2ffb4aed",
+   "id": "f431f2bd",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "list(a)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
