--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "49349e5d",
+   "id": "87d91d92",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "248486b8",
+   "id": "4a294e4d",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c546c258",
+   "id": "fd8056ee",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2102ab40",
+   "id": "db4c994c",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5becdf35",
+   "id": "a6a48198",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "64660ac0",
+   "id": "abe8e3b3",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "187b0780",
+   "id": "ae893bba",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "82abc0e5",
+   "id": "2b5ddaf4",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3e2226b7",
+   "id": "789884b4",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "57f5d969",
+   "id": "b383c4c5",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3c966da7",
+   "id": "3f383935",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "1411d574",
+   "id": "93c1913f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "14779b6e",
+   "execution_count": 83,
+   "id": "424d8437",
    "metadata": {},
    "outputs": [
     {
@@ -322,32 +322,21 @@
       "9\n",
       "10\n"
      ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'breal' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [81], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m res \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m res \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m----> 6\u001b[0m     breal\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'breal' is not defined"
-     ]
     }
    ],
    "source": [
-    "res = 10\n",
+    "res = 0\n",
     "for i in a:\n",
     "    print(i)\n",
-    "    res -= 1\n",
-    "    if res < 0:\n",
-    "        breal"
+    "    res += 1\n",
+    "    if res > 10:\n",
+    "        break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f431f2bd",
+   "id": "da38e2ea",
    "metadata": {},
    "outputs": [],
    "source": []
