--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "87d91d92",
+   "id": "60819a3f",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4a294e4d",
+   "id": "025ed6f2",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fd8056ee",
+   "id": "afe25a40",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db4c994c",
+   "id": "01587fd5",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a6a48198",
+   "id": "c552edc4",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "abe8e3b3",
+   "id": "8ac9e0e1",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "ae893bba",
+   "id": "b631d9a9",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2b5ddaf4",
+   "id": "642d4d81",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "789884b4",
+   "id": "a02221a6",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b383c4c5",
+   "id": "968fac8a",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "3f383935",
+   "id": "6d5967fe",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "93c1913f",
+   "id": "2cf8318f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "424d8437",
+   "id": "b19b6187",
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "4da35c6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inner 0 0\n",
+      "inner 0 1\n",
+      "inner 0 2\n",
+      "inner 0 3\n",
+      "inner 0 4\n",
+      "outer 0 4\n",
+      "inner 1 0\n",
+      "inner 1 1\n",
+      "inner 1 2\n",
+      "inner 1 3\n",
+      "inner 1 4\n",
+      "outer 1 4\n",
+      "inner 2 0\n",
+      "inner 2 1\n",
+      "inner 2 2\n",
+      "inner 2 3\n",
+      "inner 2 4\n",
+      "outer 2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    for j in range(5):\n",
+    "        print(\"inner\", i, j)\n",
+    "        if j > 3:\n",
+    "            break\n",
+    "    print(\"outer\", i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "da38e2ea",
+   "id": "77359570",
    "metadata": {},
    "outputs": [],
    "source": []
