--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60819a3f",
+   "id": "f7b49c91",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "025ed6f2",
+   "id": "b85a5776",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "afe25a40",
+   "id": "72debea4",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01587fd5",
+   "id": "c6ff7e58",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c552edc4",
+   "id": "e99943b6",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8ac9e0e1",
+   "id": "d7de4ac5",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b631d9a9",
+   "id": "063b01fb",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "642d4d81",
+   "id": "051403ba",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "a02221a6",
+   "id": "62cec64d",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "968fac8a",
+   "id": "53409665",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6d5967fe",
+   "id": "6efddf8a",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "2cf8318f",
+   "id": "0cf9e933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "b19b6187",
+   "id": "1f1ab812",
    "metadata": {},
    "outputs": [
     {
@@ -335,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "4da35c6c",
+   "execution_count": 88,
+   "id": "0c4b7b35",
    "metadata": {},
    "outputs": [
     {
@@ -347,20 +347,7 @@
       "inner 0 1\n",
       "inner 0 2\n",
       "inner 0 3\n",
-      "inner 0 4\n",
-      "outer 0 4\n",
-      "inner 1 0\n",
-      "inner 1 1\n",
-      "inner 1 2\n",
-      "inner 1 3\n",
-      "inner 1 4\n",
-      "outer 1 4\n",
-      "inner 2 0\n",
-      "inner 2 1\n",
-      "inner 2 2\n",
-      "inner 2 3\n",
-      "inner 2 4\n",
-      "outer 2 4\n"
+      "inner 0 4\n"
      ]
     }
    ],
@@ -370,13 +357,13 @@
     "        print(\"inner\", i, j)\n",
     "        if j > 3:\n",
     "            break\n",
-    "    print(\"outer\", i, j)"
+    "    break\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77359570",
+   "id": "e0798106",
    "metadata": {},
    "outputs": [],
    "source": []
