--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66ab8744",
+   "id": "e1b7f023",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a246fcbf",
+   "id": "84bfc223",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "32707ddd",
+   "id": "6bdc4306",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25591bef",
+   "id": "f0e42ac6",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2caad9dd",
+   "id": "8487630b",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "575986b8",
+   "id": "109e4808",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "cb706430",
+   "id": "8a176ce9",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "4e9ba737",
+   "id": "9fd44338",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e266980d",
+   "id": "067f9fbb",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "584ab191",
+   "id": "4ea4fbd3",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "23f0127a",
+   "id": "cf377376",
    "metadata": {},
    "outputs": [
     {
@@ -292,18 +292,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "671b6638",
+   "execution_count": 90,
+   "id": "d8982d1b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = range(1000000000000000000000000000000000000000)"
+    "a = range(1000000000000000000000000000000000000000)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "6c43f21b",
+   "id": "25c495e0",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "bb010311",
+   "id": "f6042b67",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e696a0e2",
+   "id": "d180b760",
    "metadata": {},
    "outputs": [],
    "source": []
