--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e1b7f023",
+   "id": "e09e4446",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "84bfc223",
+   "id": "adf11391",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6bdc4306",
+   "id": "e5648a7f",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e42ac6",
+   "id": "853140fb",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8487630b",
+   "id": "57d0968d",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "109e4808",
+   "id": "96b1feb5",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "8a176ce9",
+   "id": "726952ee",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "9fd44338",
+   "id": "b8fec2f3",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "067f9fbb",
+   "id": "875208f0",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "4ea4fbd3",
+   "id": "1720e17f",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "cf377376",
+   "id": "093dca2c",
    "metadata": {},
    "outputs": [
     {
@@ -293,17 +293,18 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "d8982d1b",
+   "id": "457659b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = range(1000000000000000000000000000000000000000)\n"
+    "a = range(1000000000000000000000000000000000000000)\n",
+    "-1 in a "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "25c495e0",
+   "id": "1b1bbbe2",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f6042b67",
+   "id": "516963f6",
    "metadata": {},
    "outputs": [
     {
@@ -436,8 +437,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "f538fd2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"d\" in [\"a\", \"b\", \"c\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d180b760",
+   "id": "fb064756",
    "metadata": {},
    "outputs": [],
    "source": []
