--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e09e4446",
+   "id": "203b17df",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "adf11391",
+   "id": "3c66b054",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e5648a7f",
+   "id": "6b17164f",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "853140fb",
+   "id": "391f027b",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "57d0968d",
+   "id": "40a0a848",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "96b1feb5",
+   "id": "2cc9c0c0",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "726952ee",
+   "id": "5c756a2b",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b8fec2f3",
+   "id": "0446d7d5",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "875208f0",
+   "id": "1fc095fb",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1720e17f",
+   "id": "ea9e90df",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "093dca2c",
+   "id": "7cc58639",
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +292,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "id": "457659b7",
+   "execution_count": 97,
+   "id": "e47dcbe4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "a = range(1000000000000000000000000000000000000000)\n",
-    "-1 in a "
+    "a = range(0, 1000000000000000000000000000000000000000, 34342)\n",
+    "34342*133244 in a "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "1b1bbbe2",
+   "id": "ace2f661",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "516963f6",
+   "id": "6577fe70",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "f538fd2f",
+   "id": "5ff66f56",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb064756",
+   "id": "ec86ee48",
    "metadata": {},
    "outputs": [],
    "source": []
