--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "031b1397",
+   "id": "2d5b9083",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a7d490de",
+   "id": "18aaadde",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a3e37f09",
+   "id": "2a305a76",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53a4de2b",
+   "id": "45267e30",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "db56e75c",
+   "id": "f3f6e4ea",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "96899099",
+   "id": "991ec51f",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "878594b3",
+   "id": "421a0e32",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ee739d5b",
+   "id": "59733876",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "837115a1",
+   "id": "c424ba34",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3a6ca965",
+   "id": "244aaa66",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "79f76daf",
+   "id": "799615c1",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7437c799",
+   "id": "70183f21",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "60d5e572",
+   "id": "ff88c54b",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "56d3a0df",
+   "id": "c4be87cf",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "482d67a7",
+   "id": "7104ff7f",
    "metadata": {},
    "outputs": [
     {
@@ -463,12 +463,17 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "[\n",
+    "    (\"Matthieu\", \"Falce\", \"MFC\"),\n",
+    "    (\"Matthieu\", \"Falce\", \"MFC\")\n",
+    "]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d9f07e",
+   "id": "8992cb9b",
    "metadata": {},
    "outputs": [],
    "source": []
