--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2d5b9083",
+   "id": "db07d99b",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "18aaadde",
+   "id": "24ef9f11",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2a305a76",
+   "id": "c606af4e",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45267e30",
+   "id": "39c22fe9",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f3f6e4ea",
+   "id": "aff9b2ea",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "991ec51f",
+   "id": "176a4837",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "421a0e32",
+   "id": "c2cbc5b8",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "59733876",
+   "id": "2069bf3d",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "c424ba34",
+   "id": "f3c285d3",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "244aaa66",
+   "id": "afa0d75a",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "799615c1",
+   "id": "cd2319b2",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "70183f21",
+   "id": "887cbbdb",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "ff88c54b",
+   "id": "7a70ca08",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "c4be87cf",
+   "id": "3d60fab5",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7104ff7f",
+   "id": "70c611c9",
    "metadata": {},
    "outputs": [
     {
@@ -466,14 +466,14 @@
    "source": [
     "[\n",
     "    (\"Matthieu\", \"Falce\", \"MFC\"),\n",
-    "    (\"Matthieu\", \"Falce\", \"MFC\")\n",
+    "    (\"Blanche\", \"Mallet\", \"ESRI\"), \n",
     "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8992cb9b",
+   "id": "489de6cb",
    "metadata": {},
    "outputs": [],
    "source": []
