--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db07d99b",
+   "id": "a98bb78a",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "24ef9f11",
+   "id": "846f9e9f",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c606af4e",
+   "id": "d37323e9",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c22fe9",
+   "id": "b654923c",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aff9b2ea",
+   "id": "f4cd6492",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "176a4837",
+   "id": "cd3bd01a",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c2cbc5b8",
+   "id": "02466483",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2069bf3d",
+   "id": "594c9e87",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f3c285d3",
+   "id": "330abe89",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "afa0d75a",
+   "id": "eae1c8f0",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "cd2319b2",
+   "id": "13bc2eb6",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "887cbbdb",
+   "id": "3b857bee",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7a70ca08",
+   "id": "a7568079",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "3d60fab5",
+   "id": "a1e26974",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "70c611c9",
+   "id": "d1defbe2",
    "metadata": {},
    "outputs": [
     {
@@ -472,8 +472,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 101,
+   "id": "e638ac7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['riri']\n",
+      "['riri', 'fifi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "ma_liste = []\n",
+    "print(ma_liste)\n",
+    "ma_liste.append(\"riri\")\n",
+    "print(ma_liste)\n",
+    "ma_liste.append(\"fifi\")\n",
+    "print(ma_liste)\n",
+    "ma_liste.append(\"fifi\")\n",
+    "print(ma_liste)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "489de6cb",
+   "id": "24a5f49c",
    "metadata": {},
    "outputs": [],
    "source": []
