--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a98bb78a",
+   "id": "9701647d",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "846f9e9f",
+   "id": "7c7de5a4",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d37323e9",
+   "id": "3ed7b38b",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b654923c",
+   "id": "fdc0eb33",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "f4cd6492",
+   "id": "fce3840f",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cd3bd01a",
+   "id": "bf761ef7",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "02466483",
+   "id": "c043c4b8",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "594c9e87",
+   "id": "b7b6c048",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "330abe89",
+   "id": "9b0562e6",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "eae1c8f0",
+   "id": "471a40a5",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "13bc2eb6",
+   "id": "bcee9165",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "3b857bee",
+   "id": "e78f4fa5",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "a7568079",
+   "id": "39641088",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "a1e26974",
+   "id": "2867b1c6",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "d1defbe2",
+   "id": "8eebcd2e",
    "metadata": {},
    "outputs": [
     {
@@ -472,38 +472,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "e638ac7a",
+   "execution_count": 105,
+   "id": "02d8392f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "['riri']\n",
-      "['riri', 'fifi']\n"
+      "['loulou', 'riri', 'fifi']\n",
+      "loulou\n",
+      "riri\n",
+      "fifi\n"
      ]
     }
    ],
    "source": [
-    "ma_liste = []\n",
-    "print(ma_liste)\n",
-    "ma_liste.append(\"riri\")\n",
-    "print(ma_liste)\n",
-    "ma_liste.append(\"fifi\")\n",
-    "print(ma_liste)\n",
-    "ma_liste.append(\"fifi\")\n",
-    "print(ma_liste)"
+    "def castor_juniors_list():\n",
+    "    ma_liste = []\n",
+    "    ma_liste.append(\"riri\")\n",
+    "    ma_liste.append(\"fifi\")\n",
+    "    ma_liste.insert(0, \"loulou\")\n",
+    "    return ma_liste\n",
+    "\n",
+    "print(castor_juniors_list())\n",
+    "for castor_junior in castor_juniors_list():\n",
+    "    print(castor_junior)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a5f49c",
+   "id": "f5ac7218",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def castor_juniors_generator():\n",
+    "    (\"riri\")\n",
+    "    ma_liste.append(\"fifi\")\n",
+    "    ma_liste.insert(0, \"loulou\")\n",
+    "    return ma_liste\n"
+   ]
   }
  ],
  "metadata": {
