--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9701647d",
+   "id": "64256325",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7c7de5a4",
+   "id": "b181e203",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ed7b38b",
+   "id": "3e664591",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdc0eb33",
+   "id": "4074125f",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fce3840f",
+   "id": "b43d4d92",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bf761ef7",
+   "id": "0d90d5a7",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c043c4b8",
+   "id": "edaae2ca",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b7b6c048",
+   "id": "2b384cfe",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "9b0562e6",
+   "id": "f373d5fc",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "471a40a5",
+   "id": "ed035b11",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bcee9165",
+   "id": "6d2da2e1",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "e78f4fa5",
+   "id": "45808da6",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "39641088",
+   "id": "10d5300f",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "2867b1c6",
+   "id": "db19e07a",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8eebcd2e",
+   "id": "cbc14db1",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "02d8392f",
+   "id": "ad6ef984",
    "metadata": {},
    "outputs": [
     {
@@ -502,17 +502,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f5ac7218",
+   "execution_count": 107,
+   "id": "2b754626",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object castor_juniors_generator at 0x7fad1e7ff200>\n"
+     ]
+    }
+   ],
    "source": [
     "def castor_juniors_generator():\n",
-    "    (\"riri\")\n",
-    "    ma_liste.append(\"fifi\")\n",
-    "    ma_liste.insert(0, \"loulou\")\n",
-    "    return ma_liste\n"
+    "    print(1)\n",
+    "    yield \"riri\"\n",
+    "    print(2)\n",
+    "    yield \"fifi\"\n",
+    "    print(3)\n",
+    "    yield \"loulou\"\n",
+    "    print(4)\n",
+    "\n",
+    "print(castor_juniors_generator())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a4ebe59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
