--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64256325",
+   "id": "f55b3f76",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "b181e203",
+   "id": "9b7a5278",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3e664591",
+   "id": "e610c614",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4074125f",
+   "id": "0cd2cba2",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b43d4d92",
+   "id": "5be49e2e",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "0d90d5a7",
+   "id": "3a7838d3",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "edaae2ca",
+   "id": "bd32cf62",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "2b384cfe",
+   "id": "edb7aa90",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f373d5fc",
+   "id": "897a8ee9",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ed035b11",
+   "id": "2b72b9ae",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6d2da2e1",
+   "id": "f3679b59",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "45808da6",
+   "id": "1404fc57",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "10d5300f",
+   "id": "d40650a2",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "db19e07a",
+   "id": "dc2b6b3f",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "cbc14db1",
+   "id": "43a3291b",
    "metadata": {},
    "outputs": [
     {
@@ -472,15 +472,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "ad6ef984",
+   "execution_count": 109,
+   "id": "9b41708b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
       "['loulou', 'riri', 'fifi']\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
       "loulou\n",
       "riri\n",
       "fifi\n"
@@ -490,9 +498,13 @@
    "source": [
     "def castor_juniors_list():\n",
     "    ma_liste = []\n",
+    "    print(1)\n",
     "    ma_liste.append(\"riri\")\n",
+    "    print(2)\n",
     "    ma_liste.append(\"fifi\")\n",
+    "    print(3)\n",
     "    ma_liste.insert(0, \"loulou\")\n",
+    "    print(4)\n",
     "    return ma_liste\n",
     "\n",
     "print(castor_juniors_list())\n",
@@ -502,15 +514,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "2b754626",
+   "execution_count": 108,
+   "id": "5ea9cdf9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object castor_juniors_generator at 0x7fad1e7ff200>\n"
+      "<generator object castor_juniors_generator at 0x7fad1e7ffdd0>\n",
+      "1\n",
+      "riri\n",
+      "2\n",
+      "fifi\n",
+      "3\n",
+      "loulou\n",
+      "4\n"
      ]
     }
    ],
@@ -524,13 +543,15 @@
     "    yield \"loulou\"\n",
     "    print(4)\n",
     "\n",
-    "print(castor_juniors_generator())"
+    "print(castor_juniors_generator())\n",
+    "for castor_junior in castor_juniors_generator():\n",
+    "    print(castor_junior)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a4ebe59",
+   "id": "5d5131e8",
    "metadata": {},
    "outputs": [],
    "source": []
