--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f55b3f76",
+   "id": "48566cc0",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9b7a5278",
+   "id": "8bb7a735",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e610c614",
+   "id": "1a82f546",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd2cba2",
+   "id": "316eb442",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5be49e2e",
+   "id": "9536945e",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "3a7838d3",
+   "id": "a31e4bc5",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "bd32cf62",
+   "id": "34fe07b4",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "edb7aa90",
+   "id": "b353f894",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "897a8ee9",
+   "id": "ea00c906",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "2b72b9ae",
+   "id": "58e80117",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f3679b59",
+   "id": "70c98d6f",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "1404fc57",
+   "id": "7f6ec677",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "d40650a2",
+   "id": "f326af46",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "dc2b6b3f",
+   "id": "0a3a2197",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "43a3291b",
+   "id": "db4b35f4",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "9b41708b",
+   "id": "f34b19dd",
    "metadata": {},
    "outputs": [
     {
@@ -514,15 +514,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "5ea9cdf9",
+   "execution_count": 111,
+   "id": "b6b36366",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object castor_juniors_generator at 0x7fad1e7ffdd0>\n",
+      "<generator object castor_juniors_generator at 0x7fad1e7ff040>\n",
       "1\n",
       "riri\n",
       "2\n",
@@ -551,7 +551,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d5131e8",
+   "id": "36dd7712",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61611018",
    "metadata": {},
    "outputs": [],
    "source": []
