--- a/tape_en_cours/Jour 2 .ipynb
+++ b/tape_en_cours/Jour 2 .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "48566cc0",
+   "id": "4a2b656e",
    "metadata": {},
    "source": [
     "# Manipuler un fichier"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8bb7a735",
+   "id": "5fce9101",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a82f546",
+   "id": "2b6cf269",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316eb442",
+   "id": "5b8f4f10",
    "metadata": {},
    "source": [
     "# Créer une fonction"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9536945e",
+   "id": "2d3903da",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "a31e4bc5",
+   "id": "3774903b",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "34fe07b4",
+   "id": "b79a1ebb",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b353f894",
+   "id": "086da284",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ea00c906",
+   "id": "388856e3",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "58e80117",
+   "id": "e72c4b9a",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "70c98d6f",
+   "id": "85cf9a4b",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7f6ec677",
+   "id": "e5c52be7",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f326af46",
+   "id": "afc13db3",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "0a3a2197",
+   "id": "fce3f1e8",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "db4b35f4",
+   "id": "963eacb5",
    "metadata": {},
    "outputs": [
     {
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "f34b19dd",
+   "execution_count": 113,
+   "id": "aee00cea",
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +489,9 @@
       "2\n",
       "3\n",
       "4\n",
+      "loulou\n",
+      "riri\n",
+      "fifi\n",
       "loulou\n",
       "riri\n",
       "fifi\n"
@@ -508,28 +511,41 @@
     "    return ma_liste\n",
     "\n",
     "print(castor_juniors_list())\n",
-    "for castor_junior in castor_juniors_list():\n",
+    "l = castor_juniors_list()\n",
+    "for castor_junior in l:\n",
+    "    print(castor_junior)\n",
+    "\n",
+    "for castor_junior in l:\n",
     "    print(castor_junior)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "b6b36366",
+   "execution_count": 116,
+   "id": "e0bf4049",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object castor_juniors_generator at 0x7fad1e7ff040>\n",
+      "<generator object castor_juniors_generator at 0x7fad1cedf660>\n",
       "1\n",
       "riri\n",
       "2\n",
       "fifi\n",
       "3\n",
       "loulou\n",
-      "4\n"
+      "4\n",
+      "fin 1\n",
+      "1\n",
+      "riri\n",
+      "2\n",
+      "fifi\n",
+      "3\n",
+      "loulou\n",
+      "4\n",
+      "fin 2\n"
      ]
     }
    ],
@@ -544,14 +560,21 @@
     "    print(4)\n",
     "\n",
     "print(castor_juniors_generator())\n",
-    "for castor_junior in castor_juniors_generator():\n",
-    "    print(castor_junior)"
+    "l = castor_juniors_generator()\n",
+    "for castor_junior in l:\n",
+    "    print(castor_junior)\n",
+    "\n",
+    "print(\"fin 1\")\n",
+    "l = castor_juniors_generator()\n",
+    "for castor_junior in l:\n",
+    "    print(castor_junior)\n",
+    "print(\"fin 2\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36dd7712",
+   "id": "8f1fffea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -559,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61611018",
+   "id": "709baa0e",
    "metadata": {},
    "outputs": [],
    "source": []
